# allergy-checker

./: .env.sample  README.md  launch_servers.sh  pyproject.toml  requirements.txt
.github/workflow/: test_api.yml
.github/workflows/: test_api.yml
backend/: allergen.yaml  app.py  app_stream.py  requirements.txt
backend/templates/: info.html
data/: allergies.db
frontend/: index.html  script.js  script_old.js  style.css
proto/: allergy_checker_proto.py  api_proto.py  api_test.py  openai_api_proto.py  openai_api_yield_proto.py  rakuten_api_proto.py
test/: allergy_checker_proto.py  expected_results.yaml  test_api.py
