[project]
name = "allergy-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.55.3",
    "python-dotenv>=1.0.1",
    "quart-cors>=0.7.0",
    "quart>=0.19.9",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]
